# VRG_DEMO

./: .gitignore  CMakeLists.txt  README.md
src/: balistics.cpp  balistics.hpp  main.cpp  main.hpp  sim_data.hpp  sim_settings.hpp  simulation.cpp  simulation.hpp  terminal_colors.hpp  transform.cpp  transform.hpp  vector3.cpp  vector3.hpp
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests  tests.cpp
